--- a/views/base.twig
+++ b/views/base.twig
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Paste Bang!</h1>
+        <ul>
+            <li><a href="/">Create</a></li>
+            <li><a href="/latest">Latest</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+        <hr>
         {% block main %}
         {% endblock %}
     </body>
