--- a/views/view.twig
+++ b/views/view.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
     <h2>Viewing paste {{ paste.normalisedTitle }}</h2>
-    <p>Created {{ paste.createdDisplay }}</p>
+    <p>Created {{ paste.createdFormatted }}</p>
     <p>Syntax: {{ paste.syntax.displayName }}</p>
     <pre>{{ paste.body }}</pre>
 {% endblock %}
