--- a/views/contact.twig
+++ b/views/contact.twig
@@ -3,6 +3,20 @@
 {% block main %}
 
     <h2>Contact</h2>
-    <p>TODO</p>
+    <p>If you have a suggestion, have spotted a bug or have some code to contribute, please raise an issue on <a href="https://github.com/AdamBoxall/SilexPasteApp">GitHub</a> instead of contacting via this page. For everything else, please fill out the form below and I'll respond as soon as I can...</p>
+
+    <form method="post" action="">
+        <div class="field">
+            <label for="contact_name">Name:</label>
+            <input type="text" name="contact[name]">
+        </div>
+        <div class="field">
+            <label for="contact_email">Email:</lable>
+            <input type="text" name="contact[email]">
+        </div>
+        <div class="field">
+            <textarea name="contact[message]"></textarea>
+        </div>
+    </form>
 
 {% endblock %}
