--- a/views/contact.twig
+++ b/views/contact.twig
@@ -3,7 +3,7 @@
 {% block main %}
 
     <h2>Contact</h2>
-    <p>If you have a suggestion, have spotted a bug or have some code to contribute, please raise an issue on <a href="https://github.com/AdamBoxall/SilexPasteApp">GitHub</a> instead of contacting via this page. For everything else, please fill out the form below and I'll respond as soon as I can...</p>
+    <p>If you have a suggestion, have spotted a bug or have some code to contribute, please raise an issue on <a href="https://github.com/AdamBoxall/SilexPasteApp">GitHub</a> instead of contacting me via this page. For everything else, please fill out the form below and I'll respond as soon as I can...</p>
 
     <form method="post" action="">
         <div class="field">
