Made some minor improvements to forms and type

--- a/views/contact.twig
+++ b/views/contact.twig
@@ -6,15 +6,15 @@
     <p>If you have a suggestion, have spotted a bug or have some code to contribute, please raise an issue on <a href="https://github.com/AdamBoxall/SilexPasteApp">GitHub</a> instead of contacting me via this page. For everything else, please fill out the form below and I'll respond as soon as I can...</p>
 
     <form method="post" action="">
-        <div class="field">
+        <div class="cf field">
             <label for="contact_name">Name:</label>
             <input type="text" name="contact[name]">
         </div>
-        <div class="field">
-            <label for="contact_email">Email:</lable>
+        <div class="cf field">
+            <label for="contact_email">Email:</label>
             <input type="text" name="contact[email]">
         </div>
-        <div class="field">
+        <div class="cf field">
             <textarea name="contact[message]"></textarea>
         </div>
     </form>
