--- a/views/create.twig
+++ b/views/create.twig
@@ -5,11 +5,11 @@
     <h2>Create new paste</h2>
 
     <form method="post" action="">
-        <div class="field">
+        <div class="cf field">
             <label for="paste_title">Title:</label>
             <input type="text" name="paste[title]" id="paste_title">
         </div>
-        <div class="field">
+        <div class="cf field">
             <label for="paste_syntax_id">Syntax:</label>
             <select name="paste[syntax_id]" id="paste_syntax_id">
                 {% for syntax in syntaxes %}
@@ -21,11 +21,13 @@
                 {% endfor %}
             </select>
         </div>
-        <div class="field">
+        <div class="cf field">
             <textarea name="paste[body]" class="code" placeholder="Enter your code..."></textarea>
         </div>
-        <div class="field">
-            <input type="submit" value="Paste"> or press Ctrl + Enter
+        <div class="cf field">
+            <div class="form-submit">
+                <input type="submit" value="Paste"> or press Ctrl + Enter
+            </div>
         </div>
     </form>
 
