--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -2,11 +2,38 @@
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 
 /**
+ * Clearfix
+ */
+
+.cf:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+.cf {
+    display: inline-block;
+}
+
+* html .cf {
+    height: 1%;
+}
+
+.cf {
+    display: block;
+}
+
+
+/**
  * Type
  */
 
 body {
-    font-size: 100%/1.5;
+    font-size: 14px;
+    line-height: 1.5;
     font-family: 'Noto Sans', arial;
 }
 
@@ -260,16 +287,19 @@ input[type=button] {
 
 .field {
     margin-bottom: 16px;
-    overflow: hidden;
 }
 
 .field label {
     float: left;
-    line-height: 36px;
+    line-height: 35px;
 }
 
 .field input[type=text],
 .field select {
     float: right;
     width: 400px;
+}
+
+.form-submit {
+    text-align: center;
 }
