Fixed up contact form and improved buttons

--- a/views/contact.twig
+++ b/views/contact.twig
@@ -17,6 +17,11 @@
         <div class="cf field">
             <textarea name="contact[message]"></textarea>
         </div>
+        <div class="cf field">
+            <div class="button form-submit">
+                <input type="submit" value="Send Message">
+            </div>
+        </div>
     </form>
 
 {% endblock %}
