--- a/views/create.twig
+++ b/views/create.twig
@@ -25,8 +25,8 @@
             <textarea name="paste[body]" class="code" placeholder="Enter your code..."></textarea>
         </div>
         <div class="cf field">
-            <div class="form-submit">
-                <input type="submit" value="Paste"> or press Ctrl + Enter
+            <div class="button form-submit">
+                <input type="submit" value="Paste"> (or just press Ctrl + Enter)
             </div>
         </div>
     </form>
