--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -59,6 +59,98 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 /**
+ * Forms
+ */
+
+input[type=text],
+textarea,
+select {
+    border: 1px solid #bbbbbb;
+    border-radius: 2px;
+    color: #333333;
+    padding: 6px;
+}
+
+textarea {
+    height: 206px;
+    width: 646px;
+}
+
+input[type=submit],
+input[type=button] {
+    padding: 6px 8px;
+}
+
+.field {
+    margin-bottom: 16px;
+}
+
+.field label {
+    float: left;
+    line-height: 35px;
+}
+
+.field input[type=text],
+.field select {
+    float: right;
+    width: 350px;
+}
+
+.form-submit {
+    text-align: center;
+}
+
+
+/**
+ * Buttons
+ */
+
+.button a,
+.button input {
+    background: #f9f9f9;
+    background: -moz-linear-gradient(top, #f9f9f9 0%, #ebebeb 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9f9f9), color-stop(100%,#ebebeb));
+    background: -webkit-linear-gradient(top, #f9f9f9 0%,#ebebeb 100%);
+    background: -o-linear-gradient(top, #f9f9f9 0%,#ebebeb 100%);
+    background: -ms-linear-gradient(top, #f9f9f9 0%,#ebebeb 100%);
+    background: linear-gradient(to bottom, #f9f9f9 0%,#ebebeb 100%);
+    border: 1px solid #999898;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.1);
+    color: #333333;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    margin-left: 4px;
+    padding: 4px 20px;
+    text-decoration: none;
+}
+
+.button a:hover,
+.button input:hover {
+    background: #565757;
+    background: -moz-linear-gradient(top, #565757 0%, #3e3e3e 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#565757), color-stop(100%,#3e3e3e));
+    background: -webkit-linear-gradient(top, #565757 0%,#3e3e3e 100%);
+    background: -o-linear-gradient(top, #565757 0%,#3e3e3e 100%);
+    background: -ms-linear-gradient(top, #565757 0%,#3e3e3e 100%);
+    background: linear-gradient(to bottom, #565757 0%,#3e3e3e 100%);
+    border: 1px solid #2a2a2a;
+    color: #ffffff;
+    text-shadow: 0px -1px 0px rgba(0,0,0, 0.25);
+}
+
+.button a:active,
+.button input:active {
+    position: relative;
+    top: 1px;
+    left: 1px;
+}
+
+
+/**
  * Shared
  */
 
@@ -221,6 +313,11 @@ html, body {
     width: 660px;
 }
 
+.code {
+    font-family: monospace;
+    height: 308px;
+}
+
 .latest {
     background: #dcdbdb;
     border: 1px solid #b6b6b6;
@@ -258,48 +355,4 @@ html, body {
 
 .latest a {
     color: #222222;
-}
-
-
-/**
- * Forms
- */
-
-input[type=text],
-textarea,
-select {
-    border: 1px solid #bbbbbb;
-    border-radius: 2px;
-    color: #333333;
-    padding: 6px;
-}
-
-.code {
-    font-family: monospace;
-    height: 308px;
-    width: 646px;
-}
-
-input[type=submit],
-input[type=button] {
-    padding: 6px 8px;
-}
-
-.field {
-    margin-bottom: 16px;
-}
-
-.field label {
-    float: left;
-    line-height: 35px;
-}
-
-.field input[type=text],
-.field select {
-    float: right;
-    width: 350px;
-}
-
-.form-submit {
-    text-align: center;
 }
