--- a/views/base.twig
+++ b/views/base.twig
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}Paste{% endblock %}</title>
         <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     </head>
     <body>
 
@@ -45,6 +46,8 @@
         <div class="footer island">
             <p>&copy; 2013 Adam Boxall</p>
         </div>
+
+        <script src="/assets/js/main.js"></script>
 
     </body>
 </html>
