--- a/views/create.twig
+++ b/views/create.twig
@@ -4,7 +4,7 @@
 
     <h2>Create new paste</h2>
 
-    <form method="post" action="">
+    <form method="post" action="" id="create">
         <div class="cf field">
             <label for="paste_title">Title:</label>
             <input type="text" name="paste[title]" id="paste_title">
