--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -69,11 +69,14 @@ select {
     border-radius: 2px;
     color: #333333;
     padding: 6px;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 textarea {
-    height: 206px;
-    width: 646px;
+    height: 243px;
+    width: 660px;
 }
 
 input[type=submit],
@@ -99,11 +102,6 @@ input[type=button] {
 .form-submit {
     text-align: center;
 }
-
-
-/**
- * Buttons
- */
 
 .button a,
 .button input {
@@ -315,7 +313,7 @@ html, body {
 
 .code {
     font-family: monospace;
-    height: 258px;
+    height: 271px;
 }
 
 .latest {
