Added paste count to footer

--- a/views/base.twig
+++ b/views/base.twig
@@ -43,8 +43,9 @@
             </div>
         </div>
 
-        <div class="footer island">
-            <p>&copy; 2013 Adam Boxall</p>
+        <div class="cf footer island">
+            <p class="pull-left">{{ count }} pastes and counting</p>
+            <p class="pull-right">&copy; 2013 Adam Boxall</p>
         </div>
 
         <script src="/assets/js/main.js"></script>
