--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -66,7 +66,9 @@ input[type=text],
 textarea,
 select {
     border: 1px solid #bbbbbb;
-    border-radius: 2px;
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
     color: #333333;
     padding: 6px;
     -webkit-box-sizing: border-box;
@@ -116,7 +118,9 @@ input[type=button] {
     -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
             border-radius: 3px;
-    box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.1);
+    -webkit-box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.1);
+       -moz-box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.1);
+            box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.1);
     color: #333333;
     cursor: pointer;
     display: inline-block;
@@ -137,7 +141,9 @@ input[type=button] {
     background: linear-gradient(to bottom, #565757 0%,#3e3e3e 100%);
     border: 1px solid #2a2a2a;
     color: #ffffff;
-    text-shadow: 0px -1px 0px rgba(0,0,0, 0.25);
+    -webkit-text-shadow: 0px -1px 0px rgba(0,0,0, 0.25);
+       -moz-text-shadow: 0px -1px 0px rgba(0,0,0, 0.25);
+            text-shadow: 0px -1px 0px rgba(0,0,0, 0.25);
 }
 
 .button a:active,
@@ -177,7 +183,9 @@ a:hover {
 
 .highlight {
     background: #565656;
-    border-radius: 2px;
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
     color: #ffffff;
     display: inline-block;
     font-size: smaller;
@@ -227,7 +235,9 @@ html, body {
  */
 
 .bar-shadow {
-    box-shadow: 0 2px 2px 0 rgba(0,0,0, 0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0, 0.2);
+       -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0, 0.2);
+            box-shadow: 0 2px 2px 0 rgba(0,0,0, 0.2);
     margin-bottom: 16px;
 }
 
@@ -244,7 +254,9 @@ html, body {
     border-bottom: 1px solid #171717;
     color: #ffffff;
     overflow: hidden;
-    text-shadow: 1px 1px 1px rgba(0,0,0, 0.8);
+    -webkit-text-shadow: 1px 1px 1px rgba(0,0,0, 0.8);
+       -moz-text-shadow: 1px 1px 1px rgba(0,0,0, 0.8);
+            text-shadow: 1px 1px 1px rgba(0,0,0, 0.8);
 }
 
 .bar-left {
@@ -319,8 +331,12 @@ html, body {
 .latest {
     background: #dcdbdb;
     border: 1px solid #b6b6b6;
-    border-radius: 2px;
-    box-shadow: inset 0 0 4px 0 rgba(255,255,255, 0.3);
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
+    -webkit-box-shadow: inset 0 0 4px 0 rgba(255,255,255, 0.3);
+       -moz-box-shadow: inset 0 0 4px 0 rgba(255,255,255, 0.3);
+            box-shadow: inset 0 0 4px 0 rgba(255,255,255, 0.3);
     float: right;
     margin-bottom: 16px;
     padding: 12px;
