--- a/views/base.twig
+++ b/views/base.twig
@@ -27,17 +27,7 @@
                     {% block main %}{% endblock %}
                 </div>
                 <div class="latest">
-                    <h2>Latest Pastes</h2>
-                    <ul>
-                        {% for paste in latest %}
-                            <li>
-                                <span class="pull-left"><a href="/{{ paste.hexId }}">{{ paste.normalisedTitle }}</a></span>
-                                <span class="pull-right highlight">{{ paste.syntax.displayName }}</span>
-                                <br>
-                                <span class="lowlight">{{ paste.createdFormatted }}</span>
-                            </li>
-                        {% endfor %}
-                    </ul>
+                    {% include 'latest.twig' %}
                 </div>
                 <div class="push"></div>
             </div>
