Added a proxy class to GeSHi and got basic syntax highlighting working

--- a/views/view.twig
+++ b/views/view.twig
@@ -4,5 +4,7 @@
     <h2>Viewing paste '{{ paste.normalisedTitle }}'</h2>
     <p>Created {{ paste.createdFormatted }}</p>
     <p>Syntax: {{ paste.syntax.displayName }}</p>
-    <pre>{{ paste.body }}</pre>
+    <div class="code-output">
+        {{ paste.bodyFormatted|raw }}
+    </div>
 {% endblock %}
