--- a/views/create.twig
+++ b/views/create.twig
@@ -32,7 +32,7 @@
             </select>
         </div>
         <div class="cf field">
-            <textarea name="paste[body]" class="code" placeholder="Code goes here..." required></textarea>
+            <textarea name="paste[body]" class="code-entry" placeholder="Code goes here..." required></textarea>
         </div>
         <div class="cf field">
             <div class="button form-submit">
