Made some hacky changes to GeSHi to improve style of output

--- a/views/view.twig
+++ b/views/view.twig
@@ -4,7 +4,7 @@
     <h2>Viewing paste '{{ paste.normalisedTitle }}'</h2>
     <p>Created {{ paste.createdFormatted }}</p>
     <p>Syntax: {{ paste.syntax.displayName }}</p>
-    <div class="code-output">
+    <div class="echo code-output">
         {{ paste.bodyFormatted|raw }}
     </div>
 {% endblock %}
