--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -49,8 +49,12 @@ h3, .charlie {
     font-size: 16px;
 }
 
-p, li, .delta {
+h4, p, .delta {
     font-size: 14px;
+}
+
+h5, .echo {
+    font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -357,7 +361,10 @@ html, body {
     -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
             border-radius: 2px;
+    color: #333333;
     margin-bottom: 16px;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .latest {
