Fixed bugs in JS and added leading zeos to line numbers

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -367,6 +367,10 @@ html, body {
     white-space: nowrap;
 }
 
+.code-output li {
+    list-style: decimal-leading-zero;
+}
+
 .latest {
     background: #dcdbdb;
     border: 1px solid #b6b6b6;
